# fieldsight-pipeline

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG_ask_agent_vocabulary.md  CHANGELOG_template_fixes.md  CLAUDE.md  DASHBOARD-FIRST-INVERSION.md  DEPLOYMENT-RUNBOOK.md  INTEGRATION_PLAN.md  MONITORING.md  PLAN.md  PLAN_SPRINT8.md  README.md  ROADMAP.md  STATUS_REPORT_2026-04-01.md  amplify.yml  app-shell-preview.html  components-preview.html  pyproject.toml  ruff.toml  samconfig.toml  template.yaml
benchmark/: .env.example  .gitignore  README.md  app.py  requirements.txt
config/: ask_system_prompt.md  custom_vocabulary_construction_nz.txt  prompt_templates.json  prompt_templates_meeting.json  user_mapping.json
docs/: MIGRATION-HANDOFF-2026-07-04.md  PRODUCT-BACKLOG-UI-2026-07-05.md  STAGE_B_EXECUTION.md
frontend/: fieldsight_v5.jsx  index.html
infra/: db-template.yaml
scripts/: app-shell.js  bootstrap-env.sh  check-bundle-completeness.sh  cleanup_old_resources.sh  compare-timeline.mjs  db-isolation-bootstrap.md  deploy-lambda-code.sh  deploy-ui.sh  deploy_ui_from_external_repo.sh  dev-role-switcher.js  left-nav.js  mock-data.js  phase1-data-migrate.sh  phase2-resources.sh  phase3-sam-update.sh  phase4-cleanup.sh  scan-aws-naming.sh  setup-test-env.sh  smoke-test.sh  voice-ws-smoke.sh  wire-bucket-cors.sh  wire-bucket-lifecycle.sh  wire-s3-events.sh
src/: backfill_site_coords.py  chunking.py  claude_utils.py  dashscope_utils.py  deploy_frontend.sh  deploy_transcribe_callback.sh  elevenlabs_utils.py  fargate_downloader.py  geocode.py  keyframe_request.py  (+39 more)
(+273 files in other folders)
