[project]
name = "fieldsight-pipeline"
version = "2.0.0"
description = "AI-powered construction site documentation platform"
requires-python = ">=3.10"

dependencies = [
    # AWS SDK
    "boto3>=1.34",

    # HTTP clients
    "urllib3>=2.0",
    "requests>=2.31",

    # Document generation (python-docx for Word reports)
    "python-docx>=1.1",

    # Anthropic Claude API (for report generation)
    "anthropic>=0.40",

    # NumPy (for VAD audio processing)
    "numpy>=1.24",

    # ONNX Runtime (for Silero VAD model inference)
    "onnxruntime>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "ruff>=0.4",
    "mypy>=1.0",
    "boto3-stubs[s3,lambda,dynamodb,transcribe]>=1.34",
]

[tool.uv]
# Pin Python 3.12 when available; falls back to >=3.10
python-preference = "managed"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: touches a real PostgreSQL (skipped unless TEST_DATABASE_URL is set)",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
